<resources>
    <string name="app_name">MyPet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email </string>
    <string name="passowrd">Sifre</string>
    <string name="login">Giriş Yap</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Üye Değilsen? Buradan Üye Ol.</string>
    <string name="fullName">Ad Soyad</string>
    <string name="mobileNumber">Telefon</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">Kayıt Ol</string>
    <string name="already_user">Üyeysen...Buradan Giriş Yap!</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_ilan_paylas__ana">IlanPaylas_Ana</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_deneme">deneme</string>
    <string name="title_home">AnaSayfa</string>
    <string name="title_dashboard">Paylaş</string>
    <string name="title_notifications">Profil</string>
    <string name="title_activity_gonderi_detay">GonderiDetay</string>
</resources>
